--- a/index.html
+++ b/index.html
@@ -544,25 +544,25 @@
                 <div class="skill">
                     <h3>HTML <span>80%</span></h3>
                     <div class="the-progress">
-                        <span style="width: 80%"></span>
+                        <span style="width: 0" data-width="80%"></span>
                     </div>
                 </div>
                 <div class="skill">
                     <h3>CSS <span>85%</span></h3>
                     <div class="the-progress">
-                        <span style="width: 85%"></span>
+                        <span style="width: 0" data-width="85%"></span>
                     </div>
                 </div>
                 <div class="skill">
                     <h3>JavaScript <span>90%</span></h3>
                     <div class="the-progress">
-                        <span style="width: 90%"></span>
+                        <span style="width: 0" data-width="90%"></span>
                     </div>
                 </div>
                 <div class="skill">
                     <h3>Python <span>77%</span></h3>
                     <div class="the-progress">
-                        <span style="width: 77%"></span>
+                        <span style="width: 0" data-width="77%"></span>
                     </div>
                 </div>
             </div>
@@ -730,28 +730,31 @@
     <!-- start stats  -->
     <div class="stats" id="stats">
         <h2>Our Awesome Stats</h2>
+        <div class="sec">
         <div class="container">
             <div class="box">
                 <i class="far fa-user fa-2x fa-fw"></i>
-                <span class="number">300</span>
+                <span class="number" data-goal="300">0</span>
                 <div class="text">Clients</div>
             </div>
             <div class="box">
                 <i class="fas fa-code fa-2x fa-fw"></i>
-                <span class="number">200</span>
+                <span class="number" data-goal="200">0</span>
                 <div class="text">Project</div>
             </div>
             <div class="box">
                 <i class="fas fa-globe-asia fa-2x fa-fw"></i>
-                <span class="number">15</span>
+                <span class="number" data-goal="15">0</span>
                 <div class="text">Countries</div>
             </div>
             <div class="box">
                 <i class="far fa-money-bill-alt fa-2x fa-fw"></i>
-                <span class="number">500K</span>
+                <span class="number" data-goal="500">0</span> 
+                <span class="k">K</span>
                 <div class="text">Mony</div>
             </div>
         </div>
+    </div>
     </div>
     <!-- start stats  -->
     <!-- start discount  -->
@@ -841,5 +844,6 @@
             <p class="copyright">Made With <span><i class="fa-solid fa-heart"></i></span>By Yousef Al Mughari</p>
     </div>
     <!-- end footer  -->
+    <script src="js/main.js"></script>
 </body>
 </html>
